# richacl

./: .gitignore  INSTALL  Makefile  Makefile.am  README  TODO  aclocal.m4  autogen.sh  configure.ac  configure.in  exports
build-aux/: unifdef
doc/: CHANGES  COPYING  COPYING-GPLv2  COPYING-LGPLv2  COPYING-LGPLv2.1  INSTALL  Makefile  PORTING  macos-hfs+.txt  solaris-zfs.txt
include/: Makefile  Makemodule.am  builddefs.in  buildmacros  nfs4acl-internal.h  nfs4acl.h  nfs4acl_xattr.h  richacl.h  string_buffer.h
include/sys/: richacl.h
include/uapi/linux/: richacl.h  richacl_xattr.h  xattr.h
lib/: Makemodule.am  byteorder.h  in_groups.c  librichacl.pc.in  nfs4acl.c  nfs4acl_compat.c  richace_copy.c  richace_free.c  richace_is_everyone.c  richace_is_group.c  richace_is_owner.c  richace_is_same_identifier.c  richace_is_unix_group.c  richace_is_unix_user.c  richace_set_gid.c  richace_set_special_who.c  richace_set_uid.c  richace_set_unmapped_who.c  richacl-internal.h  richacl_access.c  richacl_alloc.c  richacl_append_entry.c  richacl_apply_masks.c  richacl_auto_inherit.c  richacl_base.c  richacl_change_mask.c  richacl_chmod.c  richacl_clone.c  richacl_compare.c  richacl_compat.c  richacl_compute_max_masks.c  richacl_delete_entry.c  richacl_equiv_mode.c  richacl_free.c  richacl_from_mode.c  richacl_from_text.c  richacl_from_xattr.c  richacl_get_fd.c  richacl_get_file.c  richacl_inherit.c  (+19 more)
libnfs4acl/: Makefile  nfs4acl.c
librichacl/: Makefile  Makemodule.am  richacl-internal.h  richacl.c  richacl_base.c  richacl_compat.c  richacl_text.c  richacl_xattr.c  richacl_xattr.h  string_buffer.c
man/: Makemodule.am  getrichacl.1  richacl.7  richaclex.7  setrichacl.1  txt-filter
nfs4acl/: Makefile  nfs4acl.c
richacl/: Makefile  Makemodule.am  richacl.c  user_group.h
src/: Makemodule.am  common.c  common.h  getrichacl.c  nfs4acl.c  renameat2.c  require-richacls.c  richacl-inherit.c  setrichacl.c  user_group.c  user_group.h
test/: Makefile  apply-mask.test  auto-inheritance.test  basic.test  chmod.test  chown.test  computed-mode.test  create.test  ctime.test  delete.test  modify.test  richacl-as-mode.test  run  setacl.test  unrepresentable.test  write-vs-append.test
tests/: Makemodule.am  apply-masks  apply-masks-2  auto-inheritance  basic  chmod  chown  create  ctime  delete  equiv-mode  from-mode  lib-apply-masks  lib-equiv-mode  lib-from-mode  lib-inherit  rename  rename-posix  require-richacls.c  richacl-apply-masks.c  richacl-equiv-mode.c  richacl-equiv-mode.txt  richacl-from-mode.c  runas.c  setrichacl-modify  su.c  test-lib.sh  write-vs-append
